# procedural-animals

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: 1.distance_constraint.c  2.variable_radii.c  3.outline.c  4.angular_constraint.c  5.fill.c  main.c
web/: CMakeLists.txt  index.html  nob.c  raylib.js
web/examples/: procedural_snake.c
web/include/: math.h
web/wasm/: core_basic_screen_manager.wasm  core_basic_window.wasm  core_input_keys.wasm  core_input_mouse_wheel.wasm  procedural_snake.wasm  shapes_colors_palette.wasm  text_writing_anim.wasm  tsoding_ball.wasm  tsoding_snake.wasm
